--- a/public/styles.css
+++ b/public/styles.css
@@ -514,7 +514,7 @@ input[type='text'] {
   color: #c4302b;
   border: 1px solid #000; /* 🔲 borda preta */
   border-radius: 4px;    /* cantos arredondados */
-  padding: 0 10px;
+  padding: 10px;
 }
 
 .salmo-link:hover { text-decoration: underline; }
