--- a/public/styles.css
+++ b/public/styles.css
@@ -508,7 +508,7 @@ input[type='text'] {
 .salmo-link {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 0;
   margin-top: 20px;
   text-decoration: none;
   font-weight: bold;
