--- a/public/styles.css
+++ b/public/styles.css
@@ -520,6 +520,10 @@ input[type='text'] {
   padding: 10px;
 }
 
+.salmo-link img {
+  border-left: 2px solid #000; /* <<< linha vertical divisória */
+}
+
 .salmo-link:hover { text-decoration: underline; }
 
 .yt-icon {
