--- a/public/styles.css
+++ b/public/styles.css
@@ -522,8 +522,7 @@ input[type='text'] {
 
 .salmo-link img {
   border-left: 1px solid #000; /* <<< linha vertical divisória */
-  padding-right: 5px;
-  margin: 0;
+  margin-right: 5px;
 }
 
 .salmo-link:hover { text-decoration: underline; }
