--- a/public/styles.css
+++ b/public/styles.css
@@ -522,13 +522,13 @@ input[type='text'] {
 
 .salmo-link img {
   border-left: 1px solid #000; /* <<< linha vertical divisória */
-  margin-right: 5px;
 }
 
 .salmo-link:hover { text-decoration: underline; }
 
 .yt-icon {
   height: 28px;
+  margin-left: 10px;
 }
 
 .menu-separator {
