--- a/public/styles.css
+++ b/public/styles.css
@@ -507,7 +507,7 @@ input[type='text'] {
   color: white;
 }
 
-.salmo-link, .feedback {
+.salmo-link {
   display: flex;
   align-items: center;
   gap: 6px;
@@ -537,4 +537,13 @@ input[type='text'] {
 
 .side-menu input[type="radio"] {
   accent-color: #b22222;
+}
+
+/* Sugestão / Reclamação */ 
+.feedback {
+  font-weight: bold;
+  color: #c4302b;
+  border: 1px solid #000; /* 🔲 borda preta */
+  border-radius: 4px;    /* cantos arredondados */
+  padding: 10px;
 }
