--- a/public/styles.css
+++ b/public/styles.css
@@ -545,4 +545,6 @@ input[type='text'] {
   color: #c4302b;
   border: 1px solid #000; /* 🔲 borda preta */
   border-radius: 4px;    /* cantos arredondados */
+  margin: 0;
+  padding: 10px;
 }
