--- a/public/styles.css
+++ b/public/styles.css
@@ -546,14 +546,13 @@ input[type='text'] {
   border: 1px solid #000; /* 🔲 borda preta */
   border-radius: 4px;    /* cantos arredondados */
   margin: 0;
-  padding: 10px;
+  padding: 0 10px;
   display: flex;
   flex-direction: column;
   align-itens: center;
 }
 
 .feedback form {
-  padding: 0;
   width: 100%;
   height: 50px;
 }
