--- a/public/styles.css
+++ b/public/styles.css
@@ -512,6 +512,7 @@ input[type='text'] {
   align-items: center;
   gap: 6px;
   margin-top: 20px;
+  margin-botton: 20px;
   text-decoration: none;
   font-weight: bold;
   color: #c4302b;
@@ -550,8 +551,7 @@ input[type='text'] {
   align-itens: center;
 }
 
-.feedback form {
+.feedback form, h4 {
   padding: 0;
   margin: 0;
-  width: 100;
 }
