--- a/public/styles.css
+++ b/public/styles.css
@@ -551,13 +551,12 @@ input[type='text'] {
   align-itens: center;
 }
 
-.feedback h4 {
+.feedback form h4 {
   padding: 0;
   margin: 0;
 }
 
 .feedback input {
-  margin-top: 10px;
-  width: 90%;
+  width: 500px;
 }
 
