--- a/public/styles.css
+++ b/public/styles.css
@@ -551,12 +551,13 @@ input[type='text'] {
   align-itens: center;
 }
 
-.feedback form h4 {
+.feedback form, h4 {
   padding: 0;
   margin: 0;
 }
 
 .feedback textarea {
-  width: 500px;
+  width: 100px;
+  margin: 0;
 }
 
