--- a/public/styles.css
+++ b/public/styles.css
@@ -565,6 +565,7 @@ input[type='text'] {
 
 .feedback-btn {
   width: 40%;
+  font-weight: bold;
   background-color: #8b0000;
   color: #fff;
   border-radius: 4px;
