--- a/public/styles.css
+++ b/public/styles.css
@@ -564,13 +564,14 @@ input[type='text'] {
 }
 
 #feedback-btn {
-  width: 40%;
+  width: 50%;
+  margin: 0;
   font-weight: bold;
   background-color: #8b0000;
   color: #fff;
   border-radius: 4px;
   border: none;
-  padding: 10px
+  padding: 5px;
 }
 
 /* Pop-up Sugestão */
