--- a/public/styles.css
+++ b/public/styles.css
@@ -566,12 +566,12 @@ input[type='text'] {
 #feedback-btn {
   width: 50%;
   margin: 0;
+  padding: 0;
   font-weight: bold;
   background-color: #8b0000;
   color: #fff;
   border-radius: 4px;
   border: none;
-  padding: 5px;
 }
 
 /* Pop-up Sugestão */
