--- a/public/styles.css
+++ b/public/styles.css
@@ -615,7 +615,7 @@ input[type='text'] {
 /* === 🔹 Botões de título dos chats === */
 .chat-toggle {
   width: 100%;
-  background-color: #add8e6; /* azul claro */
+  background-color: #9ec9db; /* azul claro */
   color: #000;
   border: none;
   border-radius: 0;
@@ -628,9 +628,8 @@ input[type='text'] {
   margin-top: 10px;
 }
 
-.chat-toggle:hover {
-  background-color: #9ec9db;
-}
+.chat2-toggle {
+  background-color: #add8e6;
 
 /* === 🔹 Área recolhível dos chats === */
 .chat-container {
