--- a/public/styles.css
+++ b/public/styles.css
@@ -702,7 +702,7 @@ input[type='text'] {
 .menu-footer {
   text-align: center;
   font-size: 0.85rem;
-  color: #bbb;
+  color: #212121;
   background-color: black;
   padding: 15px 10px;
   line-height: 1.4;
