--- a/public/styles.css
+++ b/public/styles.css
@@ -702,12 +702,11 @@ input[type='text'] {
 .menu-footer {
   text-align: center;
   font-size: 0.85rem;
-  color: #212121;
+  color: #212830;
   background-color: black;
-  padding: 15px 10px;
+  padding: 10px;
   line-height: 1.4;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  margin-top: 80px;
 }
 
 .menu-footer a {
