--- a/public/styles.css
+++ b/public/styles.css
@@ -707,7 +707,8 @@ input[type='text'] {
   width: 100%;
   text-align: center;
   font-size: 0.85rem;
-  color: #212830;
+  background-color: #212830;
+  color: #fff;
   padding: 10px 5px;
   border-top: 1px solid #333;
   background: rgba(30, 30, 30, 0.95);
