--- a/public/styles.css
+++ b/public/styles.css
@@ -722,3 +722,10 @@ input[type='text'] {
   text-decoration: underline;
 }
 
+#salmo-container {
+  background-color: #e6f3ff; /* azul bem claro */
+  padding: 15px;
+  border-radius: 0 0 8px 8px;
+  border: 1px solid #ccc;
+  margin-bottom: 15px;
+}
