--- a/public/styles.css
+++ b/public/styles.css
@@ -723,7 +723,7 @@ input[type='text'] {
 }
 
 #salmo-container {
-  background-color: #CEEAF3; /* azul bem claro */
+  background-color: #DDE6EC; /* Fundo do salmo */
   padding: 15px;
   border-radius: 0 0 8px 8px;
   border: 1px solid #ccc;
