--- a/public/styles.css
+++ b/public/styles.css
@@ -722,15 +722,15 @@ input[type='text'] {
   text-decoration: underline;
 }
 
-#salmo-conteudo {
-  background-color: #D6EFFF; /* Fundo do texto*/
-}
-
-#salmo-container {
+.salmo-toggle {
   background-color: #DDE6EC; /* Fundo da caixa*/
   padding: 15px;
   border-radius: 0 0 8px 8px;
   border: 1px solid #ccc;
   margin-bottom: 15px;
+}
+
+#salmo-conteudo {
+  background-color: #D6EFFF; /* Fundo do texto*/
 }
 
