--- a/public/styles.css
+++ b/public/styles.css
@@ -731,6 +731,6 @@ input[type='text'] {
 }
 
 #salmo-conteudo {
-  background-color: #D6EFFF; /* Fundo do texto*/
+  background-color: #f3f3f3; /* Fundo do texto*/
 }
 
