--- a/public/styles.css
+++ b/public/styles.css
@@ -723,7 +723,7 @@ input[type='text'] {
 }
 
 #salmo-toggle {
-  background-color: #DDE6EC; /* Fundo da caixa*/
+  background-color: #D0E9F9; /* Fundo da caixa*/
   padding: 15px;
   border-radius: 0 0 8px 8px;
   border: 1px solid #ccc;
