--- a/public/styles.css
+++ b/public/styles.css
@@ -744,7 +744,7 @@ input[type='text'] {
   margin-bottom: 15px;
 }
 
-#salmo-conteudo {
+#salmo-container {
   background-color: #fff8dc; /* amarelo claro estilo papel (cornsilk) */
   padding: 15px;
   border-radius: 12px;
