--- a/public/styles.css
+++ b/public/styles.css
@@ -746,7 +746,7 @@ input[type='text'] {
 #salmo-container {
   background-color: #fff8dc; /* amarelo claro estilo papel (cornsilk) */
   padding: 15px;
-  border-radius: 12px;
+  border-radius: 0 0 6px 6px;
   border-top: none;
   border: 1px solid #f0e68c; /* leve borda dourada para realçar */
   color: #333; /* texto escuro para contraste */
