--- a/public/styles.css
+++ b/public/styles.css
@@ -136,7 +136,7 @@ header h1 {
   margin: 12px 0;
   font-size: 16px;
   font-weight: bold;
-  color: #8b0000;
+  color: gray;
 }
 
 .side-menu input[type="checkbox"],
