--- a/public/styles.css
+++ b/public/styles.css
@@ -139,6 +139,17 @@ header h1 {
   color: gray;
 }
 
+/* Altera a cor dos inputs quando marcados */
+/*
+.side-menu input[type="checkbox"] {
+  accent-color: #8b0000; 
+}
+
+.side-menu input[type="radio"] {
+  accent-color: #b22222;
+}
+*/
+
 .side-menu input[type="checkbox"],
 .side-menu input[type="radio"] {
   margin-right: 8px;
@@ -531,15 +542,6 @@ input[type='text'] {
 .menu-separator {
   margin-top: 14px;   /* espaço acima */
   }
-
-/* Altera a cor dos inputs quando marcados */
-.side-menu input[type="checkbox"] {
-  accent-color: #8b0000;  /* vermelho escuro */
-}
-
-.side-menu input[type="radio"] {
-  accent-color: #b22222;
-}
 
 /* === Formulário Sugestão === */ 
 .feedback {
